WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
185920
[El Capitan] FAIL http/tests/security/webaudio-render-remote-audio-allowed-crossorigin.html
https://bugs.webkit.org/show_bug.cgi?id=185920
Summary
[El Capitan] FAIL http/tests/security/webaudio-render-remote-audio-allowed-cr...
Jer Noble
Reported
2018-05-23 13:23:48 PDT
[Sierra] FAIL http/tests/security/webaudio-render-remote-audio-allowed-crossorigin.html
Attachments
Patch
(3.50 KB, patch)
2018-05-23 13:27 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(3.52 KB, patch)
2018-05-23 13:34 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch for landing
(3.52 KB, patch)
2018-05-23 14:13 PDT
,
Jer Noble
ews-watchlist
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews202 for win-future
(12.83 MB, application/zip)
2018-05-23 16:17 PDT
,
EWS Watchlist
no flags
Details
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2018-05-23 13:25:50 PDT
<
rdar://problem/40334739
>
Jer Noble
Comment 2
2018-05-23 13:27:18 PDT
Created
attachment 341121
[details]
Patch
Jer Noble
Comment 3
2018-05-23 13:34:29 PDT
Created
attachment 341123
[details]
Patch
Eric Carlson
Comment 4
2018-05-23 14:02:37 PDT
Comment on
attachment 341123
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=341123&action=review
> Source/WebCore/ChangeLog:9 > + is available there, so we don't have the ability whether HTMLMediaElement loads are CORS-valid.
Nit: "so we don't have the ability whether HTMLMediaElement loads are CORS-valid" => "so we don't have the ability to tell if HTMLMediaElement loads are CORS-valid"
Jer Noble
Comment 5
2018-05-23 14:13:27 PDT
Created
attachment 341129
[details]
Patch for landing
EWS Watchlist
Comment 6
2018-05-23 16:17:05 PDT
Comment on
attachment 341129
[details]
Patch for landing
Attachment 341129
[details]
did not pass win-ews (win): Output:
http://webkit-queues.webkit.org/results/7781670
New failing tests: http/tests/security/contentSecurityPolicy/userAgentShadowDOM/allow-video.html
EWS Watchlist
Comment 7
2018-05-23 16:17:16 PDT
Created
attachment 341143
[details]
Archive of layout-test-results from ews202 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews202 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Jer Noble
Comment 8
2018-05-24 12:45:44 PDT
Committed
r232161
<
https://trac.webkit.org/changeset/232161/webkit
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug